force-app/main/default/objects/Tangible_Property_Report__c/Tangible_Property_Report__c.object-meta.xml
<CustomObject>
    <label>Tangible Property Report</label>
    <nameField>
        <label>Tangible Property Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tangible Property Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>