force-app/main/default/objects/Tangible_Property_Report__c/fields/AwardApprovalNumber__c.field-meta.xml
<CustomField>
    <fullName>AwardApprovalNumber__c</fullName>
    <label>Award Approval Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>