force-app/main/default/objects/Tangible_Property_Report__c/fields/DateReportSubmitted__c.field-meta.xml
<CustomField>
    <fullName>DateReportSubmitted__c</fullName>
    <label>Date report submitted</label>
    <type>Date</type>
</CustomField>