force-app/main/default/objects/Tangible_Property_Report__c/fields/DoYouHaveAnyComputerEquipments__c.field-meta.xml
<CustomField>
    <fullName>DoYouHaveAnyComputerEquipments__c</fullName>
    <label>Do you have any Computer Equipments?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>