force-app/main/default/objects/Tangible_Property_Report__c/fields/EMailAddress__c.field-meta.xml
<CustomField>
    <fullName>EMailAddress__c</fullName>
    <label>E-mail Address</label>
    <type>Email</type>
</CustomField>