force-app/main/default/objects/Tangible_Property_Report__c/fields/InterestEarned__c.field-meta.xml
<CustomField>
    <fullName>InterestEarned__c</fullName>
    <label>Interest Earned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>