force-app/main/default/objects/Tangible_Property_Report__c/fields/OfficialSSignature__c.field-meta.xml
<CustomField>
    <fullName>OfficialSSignature__c</fullName>
    <label>Official&apos;s signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>