force-app/main/default/objects/Tangible_Property_Report__c/fields/Pefix__c.field-meta.xml
<CustomField>
    <fullName>Pefix__c</fullName>
    <label>Pefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>