force-app/main/default/objects/Tangible_Property_Report__c/fields/VendorNumber__c.field-meta.xml
<CustomField>
    <fullName>VendorNumber__c</fullName>
    <label>Vendor Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>